unpackaged/main/default/objects/Host_Application__c/fields/Relocation_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Assistance__c</fullName>
    <description>Formassembly question - Do you offer any relocation assistance, financial or otherwise?</description>
    <inlineHelpText>Application Question: Do you offer any relocation assistance, financial or otherwise?</inlineHelpText>
    <label>Relocation Assistance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Relocation stipend/reimbursement</fullName>
            </value>
            <value>
                <fullName>Host-provided housing</fullName>
            </value>
            <value>
                <fullName>Housing search assistance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>