unpackaged/main/default/objects/Host_Application__c/fields/Respondent_Name__c.field-meta.xml
<CustomField>
    <fullName>Respondent_Name__c</fullName>
    <description>Name of the Respondent who submitted by the Host Application</description>
    <label>Respondent Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>