unpackaged/main/default/objects/Host_Application__c/fields/State_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>State_Restrictions__c</fullName>
    <description>Fellow must reside in certain states</description>
    <inlineHelpText>Fellow must reside in certain states</inlineHelpText>
    <label>State Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>