unpackaged/main/default/objects/Host_Application__c/fields/State_s_where_fellow_must_reside__c.field-meta.xml
<CustomField>
    <fullName>State_s_where_fellow_must_reside__c</fullName>
    <description>If host can only hire fellows located in certain states. FormAssembly.</description>
    <inlineHelpText>List of states where fellow must reside</inlineHelpText>
    <label>State(s) where fellow must reside</label>
    <type>TextArea</type>
</CustomField>