unpackaged/main/default/objects/Host_Application__c/fields/Third_Party_Hire__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Hire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fellow will be hired by a third party org, not the host directly. FormAssembly.</description>
    <inlineHelpText>Fellow will be hired by a third party org, not the host directly. Host paid only.</inlineHelpText>
    <label>Third Party Hire</label>
    <type>Checkbox</type>
</CustomField>