unpackaged/main/default/objects/Host_Application__c/fields/Title_of_Respondent__c.field-meta.xml
<CustomField>
    <fullName>Title_of_Respondent__c</fullName>
    <label>Title of Respondent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>