unpackaged/main/default/objects/Host_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Organization_Name__c</columns>
    <columns>Climate_Corps_Engagement__c</columns>
    <columns>Fellowship_Program__c</columns>
    <columns>Project_Category__c</columns>
    <columns>Date_Application_Submitted__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>