unpackaged/main/default/objects/Host_Application__c/listViews/X2022_Host_Applications.listView-meta.xml
<ListView>
    <fullName>X2022_Host_Applications</fullName>
    <columns>NAME</columns>
    <columns>CCE_Account__c</columns>
    <columns>Project_Category__c</columns>
    <columns>Date_Application_Submitted__c</columns>
    <columns>Proposed_Fellowship_Dates__c</columns>
    <columns>Supervisor__c</columns>
    <columns>High_Level_Sponsor__c</columns>
    <columns>HR_Contact__c</columns>
    <columns>EDF_Relationship_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/2/2021 12:00 AM</value>
    </filters>
    <label>2022 Host Applications</label>
</ListView>