unpackaged/main/default/objects/Host_Application__c/listViews/X2022_Host_Applications_to_be_reviewed.listView-meta.xml
<ListView>
    <fullName>X2022_Host_Applications_to_be_reviewed</fullName>
    <columns>NAME</columns>
    <columns>Application_Type__c</columns>
    <columns>Organization_Name__c</columns>
    <columns>Stage__c</columns>
    <columns>Respondent_Name__c</columns>
    <columns>Title_of_Respondent__c</columns>
    <columns>Respondent_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/2/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Draft,Submitted</value>
    </filters>
    <label>2022 Host Applications - To Be Reviewed</label>
</ListView>